# resume-code

./: FromRoman().py  Project2.py  README.md  Span().py  SudokuValidifier.java  ToRoman().py  algorithm-project-1-dna-sequencing-alignment.txt  algorithm-project-2-bloom-filters.txt
6502asm/architecture-project-NESLabyrinthGame/: nesproject.s
Project1-AudioVisualizer/src/: ofApp.cpp
Project2&3-PacMan/: readme.md
analysis-of-algorithms/: algorithms-project-1-DNASequencingAlignment.py
artificial-intelligence/ai-project-2-FullyConnectedNeuralNetwork/: classification.ipynb
data-structures/: PascalTriangleRow.java  TwoSums.java
intro-to-programming/: fromRoman().py  toRoman().py
operating-systems/os-project-1-SemaphoreSinePrograms/SineAnalyzer/: CMakeLists.txt
operating-systems/os-project-1-SemaphoreSinePrograms/SineAnalyzer/include/: analyzer.h
operating-systems/os-project-1-SemaphoreSinePrograms/SineAnalyzer/src/: analyzer.c  main.c
operating-systems/os-project-1-SemaphoreSinePrograms/SineGenerator/: CMakeLists.txt
operating-systems/os-project-1-SemaphoreSinePrograms/SineGenerator/include/: generator.h
operating-systems/os-project-1-SemaphoreSinePrograms/SineGenerator/src/: generator.c  main.c
operating-systems/os-project-2-IMUDriverSimulator/Supervisor/: CMakeLists.txt
operating-systems/os-project-2-IMUDriverSimulator/Supervisor/include/: supervisor.h
operating-systems/os-project-2-IMUDriverSimulator/Supervisor/src/: main.c  supervisor.c
python/: algorithm-project-2-EmailBloomFilters.py  introprog-project-1-BankSim.py
(+180 files in other folders)
